--- a/index.html
+++ b/index.html
@@ -6,11 +6,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <title>Encuentra tu Héroe</title>
+    <link rel="shortcut icon" href="./assets/img/iconHero.svg" type="image/x-icon">
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <title>Search your Hero</title>
 </head>
 
 <body>
+    <header>
+        <nav class="navbar bg-body-tertiary">
+            <div class="container-fluid">
 
+                <span class="navbar-brand mb-0 h1">
+                    <img src="./assets/img/iconHero.svg" width="8%" class="ms-5 me-3">Search your Hero</span>
+            </div>
+        </nav>
+    </header>
+
+    <section class="container">
+        <div class="contenedor-imagen">
+            <img src="./assets/img/hero.jpg" class="img-fluid" alt="Imagen de ejemplo">
+
+            <div class="texto-superpuesto text-center">
+                <h1 class="mb-4">Search Your Hero</h1>
+                
+                <form class="row d-flex justify-content-center">
+                    <div class="col-xs-10 col-7 mb-3">
+                        <input type="text" class="form-control" id="inputSearch" placeholder="Enter a number from 1 to 731">
+                    </div>
+                    <div class="col-xs-2 col-auto">
+                        <button type="submit" class="btn btn-primary">Buscar</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </section>
 
     <!--Bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
