Se muestra imagen en card

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <section class="container">
         <div class="contenedor-imagen">
-            <img src="./assets/img/hero.jpg" class="img-fluid" alt="Imagen de ejemplo">
+            <img src="./assets/img/hero.jpg" class="w-100" alt="Imagen de ejemplo">
 
             <div class="texto-superpuesto text-center">
                 <h1 class="mb-4">Search Your Hero</h1>
