Se arregla tamaño de imagen

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
     </section>
 
-    <section class="container" id="contenido">
+    <section class="container d-flex justify-content-center" id="contenido">
     </section>
 
     <!--Bootstrap-->
