Se renderiza información del heroe en la card

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
     </section>
 
-    <section class="container d-flex justify-content-center" id="contenido">
+    <section class="container d-flex justify-content-center mt-5" id="contenido">
     </section>
 
     <!--Bootstrap-->
@@ -51,7 +51,9 @@
     <!--Jquery-->
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"
         integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-    <!--Script Local-->
+    <!--CanvasJS-->
+    <script src="https://cdn.canvasjs.com/canvasjs.min.js"> </script>
+        <!--Script Local-->
     <script src="./assets/js/script.js"></script>
 </body>
 
